--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "axios": "^0.27.2",
+    "capitalize": "^2.0.4",
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "react": "^18.1.0",
