--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^14.2.0",
     "axios": "^0.27.2",
     "capitalize": "^2.0.4",
+    "chart.js": "^3.9.1",
     "chroma-js": "^2.4.2",
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
