--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#01579B"
+  "background_color": "#F2EBE9"
 }
