--- a/package.json
+++ b/package.json
@@ -26,16 +26,14 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "vite",
+  "build": "vite build",
+  "serve": "vite preview"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.2.0"
   }
 }
